syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";

message DeathknightTalents {
	// Blood
	int32 butchery = 1;
	int32 subversion = 2;
	int32 blade_barrier = 3;
	int32 bladed_armor = 4;
	int32 scent_of_blood = 5;
	int32 two_handed_weapon_specialization = 6;
	bool rune_tap = 7;
	int32 dark_conviction = 8;
	int32 death_rune_mastery = 9;
	int32 improved_rune_tap = 10;
	int32 spell_deflection = 11;
	int32 vendetta = 12;
	int32 bloody_strikes = 13;
	int32 veteran_of_the_third_war = 14;
	bool mark_of_blood = 15;
	int32 bloody_vengeance = 16;
	int32 abominations_might = 17;
	int32 bloodworms = 18;
	bool hysteria = 19;
	int32 improved_blood_presence = 20;
	int32 improved_death_strike = 21;
	int32 sudden_doom = 22;
	bool vampiric_blood = 23;
	int32 will_of_the_necropolis = 24;
	bool heart_strike = 25;
	int32 might_of_mograine = 26;
	int32 blood_gorged = 27;
	bool dancing_rune_weapon = 28;

	// Frost
	int32 improved_icy_touch = 29;
	int32 runic_power_mastery = 30;
	int32 toughness = 31;
	int32 icy_reach = 32;
	int32 black_ice = 33;
	int32 nerves_of_cold_steel = 34;
	int32 icy_talons = 35;
	bool lichborne = 36;
	int32 annihilation = 37;
	int32 killing_machine = 38;
	int32 chill_of_the_grave = 39;
	int32 endless_winter = 40;
	int32 frigid_dreadplate = 41;
	int32 glacier_rot = 42;
	bool deathchill = 43;
	bool improved_icy_talons = 44;
	int32 merciless_combat = 45;
	int32 rime = 46;
	int32 chilblains = 47;
	bool hungering_cold = 48;
	int32 improved_frost_presence = 49;
	int32 threat_of_thassarian = 50;
	int32 blood_of_the_north = 51;
	bool unbreakable_armor = 52;
	int32 acclimation = 53;
	bool frost_strike = 54;
	int32 guile_of_gorefiend = 55;
	int32 tundra_stalker = 56;
	bool howling_blast = 57;

	// Unholy
	int32 vicious_strikes = 58;
	int32 virulence = 59;
	int32 anticipation = 60;
	int32 epidemic = 61;
	int32 morbidity = 62;
	int32 unholy_command = 63;
	int32 ravenous_dead = 64;
	int32 outbreak = 65;
	int32 necrosis = 66;
	bool corpse_explosion = 67;
	int32 on_a_pale_horse = 68;
	int32 blood_caked_blade = 69;
	int32 night_of_the_dead = 70;
	bool unholy_blight = 71;
	int32 impurity = 72;
	int32 dirge = 73;
	int32 desecration = 74;
	int32 magic_suppression = 75;
	int32 reaping = 76;
	bool master_of_ghouls = 77;
	int32 desolation = 78;
	bool anti_magic_zone = 79;
	int32 improved_unholy_presence = 80;
	bool ghoul_frenzy = 81;
	int32 crypt_fever = 82;
	bool bone_shield = 83;
	int32 wandering_plague = 84;
	int32 ebon_plaguebringer = 85;
	bool scourge_strike = 86;
	int32 rage_of_rivendare = 87;
	bool summon_gargoyle = 88; 
}

enum DeathknightMajorGlyph {
	DeathknightMajorGlyphNone = 0;
	GlyphOfAntiMagicShell = 43533;
	GlyphOfBloodStrike = 43826;
	GlyphOfBoneShield = 43536;
	GlyphOfChainsOfIce = 43537;
	GlyphOfDancingRuneWeapon = 45799;
	GlyphOfDarkCommand = 43538;
	GlyphOfDarkDeath = 45804;
	GlyphOfDeathAndDecay = 43542;
	GlyphOfDeathGrip = 43541;
	GlyphOfDeathStrike = 43827;
	GlyphOfDisease = 45805;
	GlyphOfFrostStrike = 43543;
	GlyphOfHeartStrike = 43534;
	GlyphOfHowlingBlast = 45806;
	GlyphOfHungeringCold = 45800;
	GlyphOfIceboundFortitude = 43545;
	GlyphOfIcyTouch = 43546;
	GlyphOfObliterate = 43547;
	GlyphOfPlagueStrike = 43548;
	GlyphOfRuneStrike = 43550;
	GlyphOfRuneTap = 43825;
	GlyphOfScourgeStrike = 43551;
	GlyphOfStrangulate = 43552;
	GlyphOfTheGhoul = 43549;
	GlyphOfUnbreakableArmor = 43553;
	GlyphOfUnholyBlight = 45803;
	GlyphOfVampiricBlood = 43554;
}
enum DeathknightMinorGlyph {
	DeathknightMinorGlyphNone = 0;
	GlyphOfBloodTap = 43535;
	GlyphOfCorpseExplosion = 43671;
	GlyphOfDeathSEmbrace = 43539;
	GlyphOfHornOfWinter = 43544;
	GlyphOfPestilence = 43672;
	GlyphOfRaiseDead = 43673;
}

message Deathknight {
	message Rotation {
		enum DrwDiseases {
			DoNotApply = 0;
			Normal = 1;
			Pestilence = 2;
		}

		enum ArmyOfTheDead {
			DoNotUse = 0;
			PreCast = 1;
			AsMajorCd = 2;
		}

		enum BloodTap {
			GhoulFrenzy = 0;
			IcyTouch = 1;
			BloodStrikeBT = 2;
			BloodBoilBT = 3;
		}

		enum DeathAndDecayPrio {
			MaxRuneDowntime = 0;
			MaxDndUptime = 1;
		}

		enum FirstDisease {
			FrostFever = 0;
			BloodPlague = 1;
		}

		enum BloodRuneFiller {
			BloodStrike = 0;
			BloodBoil = 1;
		}

		enum Presence {
			Blood = 0;
			Unholy = 1;
			Frost = 2;
		}

		enum FrostRotationType {
			UnknownType = 0;
			SingleTarget = 1;
			Custom = 2;
		}
		FrostRotationType frost_rotation_type = 19;

		enum BloodOpener {
			Standard = 0;
			Experimental_1 = 1;
			Experimental_2 = 2;
		}

		enum BloodSpell {
			HS = 0;
			BB = 1;
			BS = 2;
		}
		
		enum CustomSpellOption {
			CustomNoSpell = 0;
			CustomIcyTouch = 1;
			CustomPlagueStrike = 2;
			CustomPestilence = 3;
			CustomObliterate = 4;
			CustomHowlingBlast = 5;
			CustomHowlingBlastRime = 6;
			CustomBloodBoil = 7;
			CustomBloodStrike = 8;
			CustomDeathAndDecay = 9;
			CustomHornOfWinter = 10;
			CustomUnbreakableArmor = 11;
			CustomBloodTap = 12;
			CustomEmpoweredRuneWeapon = 13;
			CustomFrostStrike = 14;
		}
		CustomRotation frost_custom_rotation = 20;

		ArmyOfTheDead army_of_the_dead = 1;
		bool use_death_and_decay = 2;
		
		bool bt_ghoul_frenzy = 3;
		
		double disease_refresh_duration = 4;
		bool refresh_horn_of_winter = 5;
		
		FirstDisease first_disease = 6;
		
		DeathAndDecayPrio death_and_decay_prio = 7;

		bool use_empower_rune_weapon = 8;

		BloodRuneFiller blood_rune_filler = 9;

		Presence starting_presence = 10;
		BloodTap blood_tap = 11;

		bool use_ams = 13;
		double avg_ams_success_rate = 14;
		double avg_ams_hit = 15;

		bool auto_rotation = 16;

		bool desync_rotation = 17;

		Presence bl_presence = 18;

		Presence presence = 21;

		bool hold_erw_army = 22;
		
		bool use_gargoyle = 23;

		bool pre_nerfed_gargoyle = 24;

		Presence gargoyle_presence = 25;

		DrwDiseases drw_diseases = 26;
		BloodOpener blood_opener = 27;

		bool enable_weapon_swap = 28;
		ItemSwap weapon_swap = 29;

		bool use_dancing_rune_weapon = 30;

		BloodSpell blood_spender = 31;

		double virulence_refresh = 32;
	}
	Rotation rotation = 1;
	
	message Options {
		double starting_runic_power = 1;
		double pet_uptime = 2;
		
		bool precast_ghoul_frenzy = 3;
		bool precast_horn_of_winter = 4;

		UnitReference unholy_frenzy_target = 5;

		bool drw_pesti_apply = 6;

		bool new_drw = 7;

		double disease_downtime = 8;
	}
	Options options = 3;
}


message TankDeathknight {
	message Rotation {
		enum Opener {
			Regular = 0;
			Threat = 1;
		}

		enum OptimizationSetting {
			Hps = 0;
			Tps = 1;
		}

		enum BloodSpell {
			BloodStrike = 0;
			BloodBoil = 1;
			HeartStrike = 2;
		}

		enum BloodTapPrio {
			Defensive = 0;
			Offensive = 1;
		}

		enum Presence {
			Blood = 0;
			Frost = 1;
			Unholy = 2;
		}

		Opener opener = 1;
		OptimizationSetting optimization_setting = 2;
		BloodSpell blood_spell = 3;
		Presence presence = 4;
		BloodTapPrio blood_tap_prio = 5;
	}
	Rotation rotation = 1;
	
	message Options {
		double starting_runic_power = 1;
		UnitReference unholy_frenzy_target = 2;
		double defensive_delay = 3;
	}
	Options options = 3;
}
